app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
spec:
  ingressClassName: nginx
  rules:
    - host: mango.neurocollab.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mango-service
                port:
                  number: 8080
