infra-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-ingress
  namespace: infra
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: k8dashboard.neurocollab.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
